--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,9 @@
 
   <!-- build:css(tmp/result) assets/app.min.css -->
   <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/base.css">
+  <link rel="stylesheet" href="/assets/dashboard.css">
   <link rel="stylesheet" href="/assets/app.css">
   <!-- endbuild -->
 
