--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="/assets/base-responsive.css">
 
   <link rel="stylesheet" href="/assets/dashboard.css">
+  <link rel="stylesheet" href="/assets/login.css">
 
   <link rel="stylesheet" href="/assets/app.css">
   <!-- endbuild -->
