--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,9 @@
   <!-- build:js(tmp/result) assets/vendor.min.js -->
 
     <script src="/vendor/jquery/jquery.js"></script>
+
     <script src="/vendor/bootstrap/js/dropdown.js"></script>
+    <script src="/vendor/bootstrap/js/tab.js"></script>
 
     <!-- @if dist=false -->
     <script src="/vendor/handlebars/handlebars.js"></script>
