--- a/app/index.html
+++ b/app/index.html
@@ -58,9 +58,9 @@
     <!-- @endif -->
 
     <script src="/vendor/ember-data/ember-data.js"></script>
-    <script src="/vendor/loader.js"></script>
+    <script src="/vendor/loader.js/loader.js"></script>
     <script src="/vendor/ember-resolver/dist/ember-resolver.js"></script>
-    <script src="/vendor/ic-ajax/main.js"></script>
+    <script src="/vendor/ic-ajax/dist/named-amd/main.js"></script>
 
   <!-- endbuild -->
 
