--- a/app/index.html
+++ b/app/index.html
@@ -7,20 +7,31 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {{BASE_TAG}}
+    {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/brute-hack.css">
+
+    {{content-for 'body'}}
   </head>
   <body>
+    {{content-for 'body'}}
+
     <script>
-      window.BruteHackENV = {{ENV}};
-      window.EmberENV = window.BruteHackENV.EmberENV;
+      // window.BruteHackENV = {{ENV}};
+      // window.EmberENV = window.BruteHackENV.EmberENV;
     </script>
+
+
     <script src="assets/vendor.js"></script>
     <script src="assets/brute-hack.js"></script>
+
+
     <script>
-      window.BruteHack = require('brute-hack/app')['default'].create(BruteHackENV.APP);
+      // window.BruteHack = require('brute-hack/app')['default'].create(BruteHackENV.APP);
     </script>
+
+    {{content-for 'body-footer'}}
   </body>
+
 </html>
