Upgrade ember-cli to 0.2.0 and update project accordingly with ember#1.10.0

--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,8 @@
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/brute-hack.css">
 
-    {{content-for 'body'}}
+    {{content-for 'head-footer'}}
   </head>
-
   <body>
     {{content-for 'body'}}
 
@@ -23,5 +22,4 @@
 
     {{content-for 'body-footer'}}
   </body>
-
 </html>
